Ajusts on responsive design. Changes in Unit page, add forum and social links. Correction of horizontal scroll bar problem (footer change). Correct the forum width

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -198,6 +198,7 @@ a.menu:after, .dropdown-toggle:after {
     border-radius: 6px;
     box-shadow: 0px 0px 4px rgba(0,0,0,.065);
     padding: 20px;
+    margin-bottom: 30px;
 }
 
 .box-narrow {
@@ -214,4 +215,11 @@ a.disabled-link:active,
 a.disabled-link:hover {
         background-color:#d9d9d9 !important;
         color:#aaa !important;
+}
+
+
+.social-share {
+    float: left;
+    margin-right:10px;
+    display:inline-block;
 }
